[server] Add endpoint for subjects
